[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/thumbnail_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/components/recent_thumbnail.gd" type="Script" id=3]
[ext_resource path="res://ui/components/popup_menu.tscn" type="PackedScene" id=4]

[node name="RecentThumbnail" type="TextureRect"]
margin_right = 786.0
margin_bottom = 604.0
rect_clip_content = true
theme = ExtResource( 2 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.843137 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -50.0
margin_bottom = 50.0
grow_horizontal = 0
rect_min_size = Vector2( 50, 50 )
align = 1
valign = 1
clip_text = true

[node name="Menu" parent="." instance=ExtResource( 4 )]

[node name="Highlight" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.392157 )

[connection signal="mouse_entered" from="." to="." method="_on_RecentThumbnail_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_RecentThumbnail_mouse_exited"]
